--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zsh"]
 	path = dotfiles.zsh
 	url = git@github.com:limistah/dotfiles.zsh.git
+[submodule "neovim"]
+	path = dotfiles.nvim
+	url = git@github.com:limistah/dotfiles.nvim.git
