--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "zsh"]
-	path = dotfiles.zsh
-	url = git@github.com:limistah/dotfiles.zsh.git
-[submodule "neovim"]
-	path = dotfiles.nvim
-	url = git@github.com:limistah/dotfiles.nvim.git
+[submodule ".oh-my-zsh"]
+	path = zsh/.oh-my-zsh
+	url = https://github.com/ohmyzsh/ohmyzsh.git
