--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "zsh/.oh-my-zsh"]
-	path = zsh/.oh-my-zsh
+[submodule ".config/zsh/ohmyzsh"]
+	path = .config/zsh/ohmyzsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
