Check out more of this

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
-.vscode/extensions/
+.vscode/extensions/*
+!.vscode/extensions/extensions.json
+
+.cursor/extensions/*
+!.cursor/extensions/extensions.json
