--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".fzf"]
 	path = .fzf
 	url = https://github.com/junegunn/fzf.git
+[submodule ".tmuxifier"]
+	path = .tmuxifier
+	url = https://github.com/jimeh/tmuxifier.git
