setup tmux plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
@@ -76,3 +77,6 @@ set-option -g set-titles on
 bind E setw synchronize-panes
 # use vim movement for copy mode
 setw -g mode-keys vi
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
