--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,3 @@
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
@@ -78,5 +76,10 @@ bind E setw synchronize-panes
 # use vim movement for copy mode
 setw -g mode-keys vi
 
+# Install plugins from here
+# find plugins from https://github.com/tmux-plugins/list
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
