--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,5 @@
-#theme = catppuccin-mocha
-font-size = 12
+theme = Gruvbox Material Dark
+font-size = 8
 background-blur-radius = 20
 mouse-hide-while-typing = true
 window-decoration = true
