--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,5 @@
 theme = Gruvbox Material Dark
+tabs-location = hidden
 font-size = 8
 background-blur-radius = 20
 mouse-hide-while-typing = true
@@ -6,3 +7,6 @@ window-decoration = true
 # keybind = global:cmd+/=toggle_quick_terminal
 macos-option-as-alt = true
 background-opacity = 0.7
+status-bar-widget = cpu_usage:name="CPU"
+status-bar-widget = memory_usage:name="RAM"
+status-bar = CPU<->RAM
