chore: cleanup and sync

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,6 +73,10 @@ set-option -g set-titles on
 # synchronize panes - send the same commands to all the open panes
 # use <prefix> Shift-e to enable/disable
 bind E setw synchronize-panes
+
+# delete current window
+bind k confirm-before -p "kill window #W? (y/n)" kill-window
+
 # use vim movement for copy mode
 setw -g mode-keys vi
 
