--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,7 @@
-blur = true
+[font]
+normal = { family = "MesloLGS Nerd Font Mono", style = "Regular" }
+size = 11
 
-import = [
-    "~/.config/alacritty/themes/themes/gruvbox_material_medium_dark.toml"
-]
+
+[general]
+import = [ "~/.config/alacritty/themes/themes/gruvbox_material_medium_dark.toml" ]
